# GildedRose-Refactoring-Kata

./: .gitignore
cpp/: CMakeLists.txt  CMakeLists.txt.in  GildedRose.cc  GildedRose.h  GildedRoseUnitTests.cc
python/: gilded_rose.py
